# Reddit_Analyzer_2.0

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  cli_demo.py  phase4d_v8_test_results.txt  phase4d_v9_test_results.txt  pyproject.toml  test_nlp_integration.py  test_phase5.py
alembic/: env.py
alembic/versions/: 540a7d1cc9fe_add_political_analysis_tables.py  5453df6b0a6c_add_political_topic_analysis_fields.py  cbe264f3a8c4_create_all_tables_with_models.py  db14ca35350e_initial_migration_create_all_tables.py  phase5_heavy_models_migration.py
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py
backend/app/analytics/: statistical_analyzer.py
backend/app/api/: admin.py  auth.py
backend/app/cli/: __init__.py  admin.py  auth.py  data.py  main.py  reports.py  visualization.py
backend/app/cli/utils/: ascii_charts.py  auth_manager.py
backend/app/core/: cache.py  rate_limiter.py  request_queue.py
backend/app/middleware/: __init__.py  auth.py
backend/app/ml/models/: content_classifier.py
backend/app/ml/trainers/: __init__.py
backend/app/models/: __init__.py  base.py  collection_job.py  comment.py  ml_prediction.py  post.py  subreddit.py  subreddit_analytics.py  text_analysis.py  topic.py  user.py  user_metric.py
backend/app/processing/: sentiment_analyzer.py
backend/app/services/: __init__.py  enhanced_reddit_client.py  reddit_client.py
backend/app/tasks/: analysis_tasks.py  processing_tasks.py
backend/app/utils/: auth.py  logging.py
backend/app/validators/: data_validator.py  schemas.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_cache.py  test_data_validation.py  test_enhanced_reddit_client.py  test_models.py  test_phase2_basic.py  test_phase2_schemas.py  test_phase3_basic.py  test_phase3_models.py  test_phase4_api.py  test_phase4_auth.py  test_phase4a_cli_admin.py  test_phase4a_cli_auth.py  test_phase4a_cli_data.py  test_phase4a_cli_integration.py  test_phase4a_cli_viz.py  test_rate_limiter.py  test_reddit_client.py  test_request_queue.py
backend/tests/reports/: junit.xml  phase_1_test_report.md  phase_1_test_report_20250627_125036.md  phase_1_test_results.txt  phase_3_test_report_20250627_151500.md  phase_4_test_report.md  phase_4a_cli_test_report.md  security_report.md
database/: init.sql
docs/: phase5_implementation_summary.md  phase5_recovery_summary.md  political_analysis_summary.md
reddit_analyzer/: __init__.py  config.py  database.py
reddit_analyzer/analytics/: __init__.py  metrics_calculator.py
reddit_analyzer/api/: admin.py  auth.py
reddit_analyzer/cli/: admin.py  analyze.py  analyze_heavy.py  auth.py  data.py  main.py  nlp.py  reports.py  visualization.py
reddit_analyzer/core/: cache.py
reddit_analyzer/data/: political_topics.py
reddit_analyzer/middleware/: __init__.py  auth.py
reddit_analyzer/ml/: __init__.py
reddit_analyzer/models/: __init__.py  advanced_topic.py  collection_job.py  comment.py  ml_prediction.py  political_analysis.py  post.py  subreddit.py  subreddit_analytics.py  text_analysis.py  topic.py  user.py  user_metric.py
reddit_analyzer/processing/: __init__.py  advanced_topic_modeler.py  argument_miner.py  (+7 more)
scripts/: TEST_USERS.md  collect_test_data.py  create_test_users.py  generate_golden_outputs.py  install_deps.sh  list_users.py  reset_test_users.py  setup.sh  setup_test_users.py  test_basic_setup.py  test_both_features.py  test_connection.py  validate_phase5.py  verify_test_users.py
specs/: Project_plan.md  comment_collection_test_spec.md  data_collect_comments_feature.md  phase5_heavy_models_plan.md  phase_1_foundation.md  phase_2_data_collection.md  phase_3_data_processing.md  phase_4A_visualization_cli.md  phase_4B_root_structure_migration.md  phase_4C_nlp_integration.md  phase_4C_nlp_integration_v2.md  phase_4_visualization.md  phase_4b_cli_fixes_action_plan.md  phase_4d_political_analysis_testing.md  phase_4d_test_improvements_spec.md  phase_5_advanced_features.md  phase_6_deployment.md  political_analysis_feature_v2.md  political_bias_feature.md
tests/: conftest.py  test_cache.py  test_data_validation.py  test_enhanced_reddit_client.py  test_models.py  test_phase2_basic.py  test_phase2_schemas.py  test_phase3_basic.py  test_phase3_models.py  test_phase4_api.py  test_phase4_auth.py  test_phase4a_cli_admin.py  test_phase4a_cli_auth.py  test_phase4a_cli_data.py  test_phase4a_cli_integration.py  test_phase4a_cli_viz.py  test_phase4b_cli_commands.py  test_phase4b_cli_commands_v2.py  test_phase4c_nlp_integration.py  test_phase4c_nlp_simple.py  test_phase4d_cli_basic.py  test_phase4d_cli_basic_real_data.py  test_phase4d_cli_output.py  test_phase4d_cli_params.py  test_phase4d_cli_simple.py  test_phase4d_cli_with_real_data.py  test_phase4d_political_dimensions.py  test_phase4e_cli_comments.py  test_phase5_entity_analyzer.py  test_phase5_gpu_performance.py  test_phase5_graceful_degradation.py  test_political_dimensions_analyzer.py  test_rate_limiter.py  test_reddit_client.py  test_reddit_client_comments.py  test_request_queue.py  test_topic_analyzer.py
(+72 files in other folders)
