[project]
name = "reddit-analyzer"
version = "0.1.0"
description = "Reddit API data analysis application"
requires-python = ">=3.9"
dependencies = [
    "praw>=7.6.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.3.0",
    "python-dotenv>=0.19.0",
    "alembic>=1.8.0",
    "fastapi>=0.85.0",
    "uvicorn[standard]>=0.18.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "spacy>=3.8.7",
    "nltk>=3.9.1",
    "textblob>=0.19.0",
    "vadersentiment>=3.3.2",
    "scikit-learn>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.8.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "pre-commit>=2.20.0"
]
cli = [
    "typer[all]>=0.7.0",
    "rich>=12.0.0",
    "click>=8.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tabulate>=0.9.0",
    "plotext>=5.0.0",
    "ascii-graph>=1.5.0",
    "questionary>=1.10.0",
    "keyring>=23.0.0",
    "cryptography>=37.0.0",
    "schedule>=1.1.0"
]
data-collection = [
    "celery[redis]>=5.2.0",
    "pydantic>=1.10.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
    "python-json-logger>=2.0.0",
    "prometheus-client>=0.14.0",
    "structlog>=22.0.0",
    "sentry-sdk>=1.9.0",
    "datadog>=0.44.0"
]
data-processing = [
    "spacy>=3.4.0",
    "nltk>=3.7",
    "textblob>=0.17.0",
    "vaderSentiment>=3.3.0",
    "scikit-learn>=1.1.0",
    "transformers>=4.20.0",
    "torch>=1.12.0",
    "gensim>=4.2.0",
    "pandas>=1.4.0",
    "numpy>=1.21.0",
    "scipy>=1.8.0",
    "statsmodels>=0.13.0",
    "plotly>=5.9.0",
    "seaborn>=0.11.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reddit_analyzer"]

[project.scripts]
reddit-analyzer = "reddit_analyzer.cli.main:app"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-mock>=3.8.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "pre-commit>=2.20.0"
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=reddit_analyzer --cov-report=html --cov-report=term-missing"
