[project]
name = "reddit-analyzer"
version = "0.1.0"
description = "Reddit API data analysis application"
requires-python = ">=3.9"
dependencies = [
    "praw>=7.6.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.3.0",
    "python-dotenv>=0.19.0",
    "alembic>=1.8.0",
    "fastapi>=0.85.0",
    "uvicorn[standard]>=0.18.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.8.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "pre-commit>=2.20.0"
]
data-collection = [
    "celery[redis]>=5.2.0",
    "pydantic>=1.10.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
    "python-json-logger>=2.0.0",
    "prometheus-client>=0.14.0",
    "structlog>=22.0.0",
    "sentry-sdk>=1.9.0",
    "datadog>=0.44.0"
]
data-processing = [
    "spacy>=3.4.0",
    "nltk>=3.7",
    "textblob>=0.17.0",
    "vaderSentiment>=3.3.0",
    "scikit-learn>=1.1.0",
    "transformers>=4.20.0",
    "torch>=1.12.0",
    "gensim>=4.2.0",
    "pandas>=1.4.0",
    "numpy>=1.21.0",
    "scipy>=1.8.0",
    "statsmodels>=0.13.0",
    "plotly>=5.9.0",
    "seaborn>=0.11.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-mock>=3.8.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "pre-commit>=2.20.0"
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"
